--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,4 @@
-/frameMain.class
-/file.class
-/save.class
-/frameMain$1.class
+/閺冦儱宸荤拋棰佺皑閺堬拷$1.class
+/閺冦儱宸荤拋棰佺皑閺堬拷$2.class
+/閺冦儱宸荤拋棰佺皑閺堬拷$3.class
+/閺冦儱宸荤拋棰佺皑閺堬拷.class
